<resources>
    <string name="app_name">MiCalculadora</string>
    <string name="bienvenido_a_mi_app_calculadora">Bienvenido a mi app calculadora</string>
    <string name="introduzca_el_primer_n_mero">Introduzca el primer número:</string>
    <string name="numero_1">Número 1</string>
    <string name="introduzca_el_segundo_n_mero">Introduzca el segundo número:</string>
    <string name="numero_2">Número 2</string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="multiplicar">Mult</string>
    <string name="dividir">Dividir</string>
    <string name="el_resultado_es">El resultado es:</string>
    <string name="no_num_1">Tienes que introducir el número 1</string>
    <string name="no_num_2">Tienes que introducir el número 2</string>
    <string name="no_nums">Tienes que introducir números</string>
</resources>